cap nhập thêm phần hiển thi danh sách sản phẩm theo loại

--- a/app/src/main/res/layout/activity_banh.xml
+++ b/app/src/main/res/layout/activity_banh.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activiti.BanhActivity">
+    tools:context=".activiti.BanhActivity"
+    android:orientation="vertical">
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/toolbarBanh"
+        app:title="Bánh"
+        app:titleTextColor="#E91E63"
+        android:background="#00CC00"
+        >
+    </androidx.appcompat.widget.Toolbar>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listViewBanh">
+    </ListView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
