--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -15,12 +15,12 @@
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/edtPhone"
+    <EditText
+        android:id="@+id/edtUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Số Điện Thoại/Email"
-        android:inputType="phone"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/black"
         android:textSize="34dp"
@@ -29,7 +29,7 @@
         app:met_primaryColor="@android:color/black"
         app:met_singleLineEllipsis="true" />
 
-        <com.rengwuxian.materialedittext.MaterialEditText
+        <EditText
             android:id="@+id/edtPassword"
             android:hint="Mật Khẩu"
             android:layout_width="match_parent"
